--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -909,7 +909,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -922,7 +921,6 @@ deny 23.191.200.28;
 deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
-deny 23.191.200.31;
 deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
@@ -1200,6 +1198,7 @@ deny 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 deny 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 deny 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 deny 2a03:4000:28:1e8::69;
+deny 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
@@ -1232,6 +1231,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1752,6 +1752,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1920,6 +1921,7 @@ deny 94.142.244.16;
 deny 94.156.152.234;
 deny 94.156.152.8;
 deny 94.16.115.121;
+deny 94.16.116.81;
 deny 94.16.121.91;
 deny 94.230.208.147;
 deny 94.230.208.148;
