--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -441,6 +441,8 @@ allow 185.220.101.98;
 allow 185.220.101.99;
 allow 185.225.69.187;
 allow 185.225.69.203;
+allow 185.225.69.222;
+allow 185.225.69.225;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
@@ -917,9 +919,9 @@ allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -958,6 +960,7 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1171,6 +1174,7 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
+allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1229,7 +1233,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1590,6 +1593,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:62::a;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
@@ -1617,6 +1621,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1747,7 +1752,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1861,6 +1865,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
@@ -1928,5 +1933,6 @@ allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
+allow 95.216.107.148;
 allow 96.8.119.172;
 allow 98.128.173.33;
