--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1235,6 +1235,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1757,6 +1758,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
