--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -983,6 +983,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
