--- a/deny-tor_ips_v4.conf
+++ b/deny-tor_ips_v4.conf
@@ -983,6 +983,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
