--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -437,6 +437,7 @@ deny 2a06:1700:1:108::b829:eee2;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
