--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -18,14 +18,12 @@ set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
-set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.51;
 set_real_ip_from 104.244.74.97;
-set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.77.208;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
@@ -55,7 +53,6 @@ set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.29.184;
 set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
-set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
 set_real_ip_from 107.189.31.33;
@@ -130,7 +127,6 @@ set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 143.20.64.235;
 set_real_ip_from 144.126.133.74;
-set_real_ip_from 144.172.73.31;
 set_real_ip_from 144.31.188.82;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
@@ -208,7 +204,7 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.93.140.66;
+set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
@@ -605,10 +601,6 @@ set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
 set_real_ip_from 196.251.69.116;
 set_real_ip_from 198.167.206.214;
-set_real_ip_from 198.251.84.163;
-set_real_ip_from 198.251.84.237;
-set_real_ip_from 198.251.88.18;
-set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.212.160;
 set_real_ip_from 198.58.107.53;
@@ -639,14 +631,12 @@ set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
 set_real_ip_from 2001:41d0:304:200::9dce;
-set_real_ip_from 2001:41d0:305:2100::4ede;
 set_real_ip_from 2001:41d0:601:1100::26d0;
 set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:601:1100::6f85;
 set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
-set_real_ip_from 2001:41d0:720:e300:25::;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -918,10 +908,12 @@ set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
@@ -946,6 +938,7 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.93;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
+set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
@@ -957,7 +950,6 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1002,16 +994,6 @@ set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
-set_real_ip_from 2605:6400:30:f174::;
-set_real_ip_from 2605:6400:30:f174:1:1:1:1;
-set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
-set_real_ip_from 2605:6400:30:f174:1:2:3:4;
-set_real_ip_from 2605:6400:30:f174::42;
-set_real_ip_from 2605:6400:30:f174:42:42::;
-set_real_ip_from 2605:6400:30:f174:42:42:42:0;
-set_real_ip_from 2605:6400:30:f174:42:42:42:42;
-set_real_ip_from 2605:6400:30:f174:4:3:2:1;
-set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
@@ -1032,7 +1014,6 @@ set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7ca::2;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
-set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -1154,7 +1135,6 @@ set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:2:ee01::7583;
 set_real_ip_from 2800:ba0:6:c1::4858;
-set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
@@ -1179,6 +1159,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:4780:41:a921::1;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1620,7 +1601,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1746,7 +1726,6 @@ set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.161.198.74;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.38.225.46;
-set_real_ip_from 51.68.226.107;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
@@ -1807,7 +1786,9 @@ set_real_ip_from 66.78.40.210;
 set_real_ip_from 66.78.40.225;
 set_real_ip_from 66.94.111.228;
 set_real_ip_from 67.219.109.141;
+set_real_ip_from 69.62.120.155;
 set_real_ip_from 71.19.144.106;
+set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 72.5.43.62;
